--- a/exercise1.html
+++ b/exercise1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercise1</title>
+    <script src="exercise1.js" defer></script>
 </head>
 <body>
     
