Copy paste body of TOP's code

--- a/exercise1.html
+++ b/exercise1.html
@@ -6,7 +6,15 @@
     <title>exercise1</title>
     <script src="exercise1.js" defer></script>
 </head>
+<!-- The DOM -->
 <body>
-    
-</body>
+    <h1>
+      THE TITLE OF YOUR WEBPAGE
+    </h1>
+    <div id="container">
+        <div class="content">
+        This is the glorious text-content!
+      </div>
+    </div>
+  </body>
 </html>
